--- a/clientmobile/app.json
+++ b/clientmobile/app.json
@@ -4,7 +4,8 @@
     "slug": "booking_system",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Icon3.png",
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
